# aws-billing-notifier

./: Cargo.toml  README.md
src/: aws.rs  lib.rs  main.rs  telegram.rs
tests/: markdown_tests.rs  telegram_tests.rs
