[package]
name = "aws_billing_notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-costexplorer = "1.57.0"
lambda_runtime = "0.14.2"
reqwest = { version = "0.12.8", features = ["native-tls-vendored"] }
tokio = { version = "1.41.0", features = ["rt", "macros"] }
chrono = "0.4.38"
aws-sdk-sts = "1.54.0"
serde_json = "1.0.132"
thiserror = "2.0.12"
url = "2.5.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
